--- a/assets/index.html
+++ b/assets/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AmericanoFrontend</title>
+    <title>Americano</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="americano-frontend/config/environment" content="%7B%22modulePrefix%22%3A%22americano-frontend%22%2C%22environment%22%3A%22development%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22EXTEND_PROTOTYPES%22%3Afalse%2C%22FEATURES%22%3A%7B%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22americano-frontend%22%2C%22version%22%3A%220.0.0%2B7f523821%22%7D%7D" />
+    <meta name="americano-frontend/config/environment" content="%7B%22modulePrefix%22%3A%22americano-frontend%22%2C%22environment%22%3A%22development%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22EXTEND_PROTOTYPES%22%3Afalse%2C%22FEATURES%22%3A%7B%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22americano-frontend%22%2C%22version%22%3A%220.0.0%2Bb86b5ce2%22%7D%7D" />
 
     <link integrity="" rel="stylesheet" href="/assets/vendor.css">
     <link integrity="" rel="stylesheet" href="/assets/americano-frontend.css">
@@ -17,8 +17,8 @@
     
 
     <script src="/assets/vendor.js"></script>
-<script src="/assets/chunk.vendors-node_modules_ember-page-title_dist_helpers_page-title_js-node_modules_ember-page-titl-9a1fdf.b676de83bf8e5b8b47ee.js"></script>
-<script src="/assets/chunk.app.0a281ae9fbba86963b99.js"></script>
+<script src="/assets/chunk.vendors-node_modules_ember-page-title_dist_helpers_page-title_js-node_modules_ember-page-titl-9a1fdf.1827305f1b64d2c62a87.js"></script>
+<script src="/assets/chunk.app.b5ecb3c7f74434910021.js"></script>
     <script src="/assets/americano-frontend.js"></script>
 
     
