--- a/frontend-ember/app/index.html
+++ b/frontend-ember/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AmericanoFrontend</title>
+    <title>Americano</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
